--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
         <div class="form__inputs--tab">
           <label for="fullname">Full Name</label>
           <input type="text" id="fullname" placeholder="Enter full name" required class="form__input player--name"
-            value="Karan Singh">
+            value="">
 
           <label for="email">Email ID</label>
           <input type="text" id="email" placeholder="Enter email address" required class="form__input player--email"
-            value="itskrns@gmail.com">
+            value="">
 
           <label for="gender">Gender</label>
           <select id="gender" class="form__input player--gender">
             <option value="select">--select--</option>
-            <option value="M" selected>Male</option>
+            <option value="M">Male</option>
             <option value="F">Female</option>
           </select>
 
@@ -52,7 +52,7 @@
             <option value="10 Books">Books</option>
             <option value="18 Computers">Computers</option>
             <option value="11 Film">Film</option>
-            <option value="9 General Knowledge" selected>General Knowledge</option>
+            <option value="9 General Knowledge">General Knowledge</option>
             <option value="22 Geography">Geography</option>
             <option value="23 History">History</option>
             <option value="19 Mathematics">Mathematics</option>
@@ -67,7 +67,7 @@
           <select id="levels" class="form__input player--difficulty">
             <option value="select">--select--</option>
             <option value="easy">Easy</option>
-            <option value="medium" selected>Medium</option>
+            <option value="medium">Medium</option>
             <option value="hard">Hard</option>
           </select>
         </div>
