--- a/index.html
+++ b/index.html
@@ -49,9 +49,13 @@
             <option value="select">--select--</option>
             <option value="27 Animals">Animals</option>
             <option value="25 Art">Art</option>
+            <option value="16 Board Games">Board Games</option>
             <option value="10 Books">Books</option>
+            <option value="32 Cartoons & Animations">Cartoons & Animations</option>
+            <option value="29 Comics">Comics</option>
             <option value="18 Computers">Computers</option>
             <option value="11 Film">Film</option>
+            <option value="30 Gadgets">Gadgets</option>
             <option value="9 General Knowledge" selected>General Knowledge</option>
             <option value="22 Geography">Geography</option>
             <option value="23 History">History</option>
@@ -60,7 +64,10 @@
             <option value="20 Mythology">Mythology</option>
             <option value="24 Politics">Politics</option>
             <option value="17 Science and Nature">Science and Nature</option>
+            <option value="21 Sports">Sports</option>
             <option value="14 Television">Television</option>
+            <option value="28 Vehicle">Vehicle</option>
+            <option value="15 Video Games">Video Games</option>
           </select>
 
           <label for="levels">Level</label>
